# Eclipse-Market

./: .env.example  .gitignore  API_SETTINGS_GUIDE.md  MULTISIG_IMPLEMENTATION.md  PAPER_TRADING.md  PORTFOLIO_ANALYTICS.md  README.md  SECURITY_IMPLEMENTATION.md  SOCIAL_INTELLIGENCE_HUB.md  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.tsx  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: price_engine_bench.rs
src-tauri/config/: cache_ttl.json
src-tauri/src/: ai.rs  ai_chat.rs  anomalies.rs  api_analytics.rs  api_config.rs  auth.rs  auto_start.rs  automation.rs  cache_commands.rs  chart_stream.rs  db.rs  drawings.rs  indicators.rs  jupiter.rs  lib.rs  main.rs  market.rs  realtime.rs  sentiment.rs  stream_commands.rs  tray.rs  updater.rs  voice.rs  windowing.rs
src-tauri/src/academy/: commands.rs  content.rs  progress.rs  rewards.rs
src-tauri/src/alerts/: mod.rs  price_alerts.rs
src-tauri/src/api/: health_monitor.rs  jupiter.rs  mod.rs  trading_execution.rs
src-tauri/src/auth/: biometric.rs  mod.rs  session_manager.rs  two_factor.rs
src-tauri/src/backup/: cloud_providers.rs  mod.rs  scheduler.rs  service.rs  settings_manager.rs
src-tauri/src/bots/: dca_bot.rs
src-tauri/src/bridges/: allbridge.rs  commands.rs  mod.rs  synapse.rs  types.rs  wormhole.rs
src-tauri/src/chains/: arbitrum.rs  base.rs  commands.rs  ethereum.rs  mod.rs  polygon.rs  solana.rs  types.rs
src-tauri/src/collab/: commands.rs  crypto.rs  moderation.rs  room.rs  types.rs  websocket.rs
src-tauri/src/compiler/: auto_compiler.rs
src-tauri/src/config/: commands.rs  mod.rs  settings_manager.rs  settings_schema.rs
src-tauri/src/core/: cache_manager.rs  mod.rs  price_engine.rs  websocket_manager.rs
src-tauri/src/data/: cache_commands.rs  cache_manager.rs  compression_commands.rs  database.rs  event_store.rs  mod.rs
src-tauri/src/defi/: auto_compound.rs  governance.rs  kamino.rs  marginfi.rs  position_manager.rs  solend.rs  staking.rs  types.rs  yield_farming.rs
src-tauri/src/dev_tools/: commands.rs
src-tauri/src/diagnostics/: code_repair.rs  db_repair.rs  dependency_manager.rs  engine.rs  file_repair.rs  issue_detector.rs  network_repair.rs  performance_repair.rs  tauri_commands.rs
src-tauri/src/errors/: app_error.rs  crash_reporter.rs  mod.rs  runtime_handler.rs
src-tauri/src/fixer/: auto_fixer.rs
src-tauri/src/governance/: commands.rs  manager.rs  mod.rs
src-tauri/src/insiders/: alert_manager.rs  commands.rs  mod.rs  smart_money.rs  types.rs  wallet_monitor.rs
src-tauri/src/journal/: analytics.rs  commands.rs  database.rs
src-tauri/src/launchpad/: airdrop.rs  commands.rs  liquidity.rs  mod.rs  security.rs  token.rs  vesting.rs
src-tauri/src/logger/: comprehensive_logger.rs
src-tauri/src/market/: holders.rs  mod.rs  new_coins_scanner.rs  polymarket_adapter.rs  predictions.rs  top_coins.rs  trending_coins.rs
src-tauri/src/mobile/: auth.rs  push.rs  sync.rs  trades.rs
src-tauri/src/monitor/: performance.rs
src-tauri/tests/: activity_log_tests.rs  api_config_tests.rs  cache_manager_tests.rs  chains_test.rs  data_pipeline_tests.rs  defi_tests.rs  holder_analysis_test.rs  journal_tests.rs  launch_predictor_tests.rs  multi_wallet_test.rs  multisig_tests.rs  paper_trading_tests.rs  performance_tests.rs  risk_scoring_test.rs  safety_tests.rs  sentiment_anomaly_tests.rs  social_analysis_tests.rs  social_data_tests.rs  social_tests.rs  social_whales_tests.rs  tax_tests.rs  voice_tests.rs  websocket_manager_tests.rs
(+536 files in other folders)
