[package]
name = "app"
version = "0.1.0"
description = "Eclipse Market Pro"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Core
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"

# Solana
solana-sdk = { version = "1.17.0", default-features = false, features = ["program"] }
solana-client = "1.17.0"

# Database
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-native-tls", "sqlite"] }

# Security
keyring = "2.0.0"
zeroize = "1.3.0"
argon2 = "0.5.3"

# Networking
reqwest = { version = "0.11.27", features = ["json"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.28"

# Utilities
chrono = { version = "0.4.35", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dirs = "5.0.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
base64 = "0.21.7"
bincode = "1.3.3"

tauri = { version = "1.5.3", features = ["shell-open"] }

curve25519-dalek = { version = "3.2.1", default-features = false }
rand = "0.9.2"
lazy_static = "1.5.0"
serde_urlencoded = "0.7.1"
thiserror = "2.0.17"
serde_with = "3.15.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Devices_Input", "Security_Credentials_UI", "Foundation", "Storage_Streams"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5"
core-foundation = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
httpmock = "0.7.0"
